--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "webpack -w & nodemon server",
-    "start": "webpack & node server"
+    "start": "webpack -p & node server"
   },
   "keywords": [],
   "author": "",
