--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "domicilios-test",
+  "homepage": " https://kamiloc.github.io/domicilios-test/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack -p & node server",
-    "test": "webpack -w & nodemon server"
+    "test": "webpack -w & nodemon server",
+    "deploy": "webpack -p&&gh-pages -d public"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
+    "gh-pages": "^1.0.0",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "sass-loader": "^6.0.5",
